[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/FormulaBook/Archive Page/ArchivePopup/Slot.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Fonts/prstart.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Formula Book/Archive Page/Archive FormulaPopup/Archive bg.png" type="Texture" id=3]
[ext_resource path="res://Assets/Formula Book/Archive Page/Archive FormulaPopup/Set as Favorite Button.png" type="Texture" id=4]
[ext_resource path="res://Assets/Formula Book/Archive Page/Archive FormulaPopup/Delete.png" type="Texture" id=5]
[ext_resource path="res://Assets/Fonts/[labels] basis33.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Scenes/FormulaBook/Archive Page/ArchivePopup/ArchivePopup.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxEmpty" id=2]

[node name="Popup" type="Popup"]
anchor_left = 0.474
anchor_top = 0.497
anchor_right = 0.474
anchor_bottom = 0.497
margin_left = -547.04
margin_top = -627.68
margin_right = 548.96
margin_bottom = 628.32
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArchiveUI" type="Control" parent="."]
anchor_top = 0.006
anchor_bottom = 0.006
margin_top = -7.536
margin_right = 1096.0
margin_bottom = 1256.46
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ArchiveUI"]
margin_right = 1094.0
margin_bottom = 1260.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArchivePopupControl" type="Control" parent="."]
margin_right = 1094.0
margin_bottom = 1256.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slots" type="Control" parent="ArchivePopupControl"]
margin_top = 600.0
margin_right = 1104.0
margin_bottom = 1256.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot1" parent="ArchivePopupControl/Slots" instance=ExtResource( 1 )]
margin_left = 256.0
margin_top = 72.0
margin_right = 344.0
margin_bottom = 188.0

[node name="Slot2" parent="ArchivePopupControl/Slots" instance=ExtResource( 1 )]
margin_left = 400.0
margin_top = 72.0
margin_right = 488.0
margin_bottom = 188.0

[node name="Slot3" parent="ArchivePopupControl/Slots" instance=ExtResource( 1 )]
margin_left = 544.0
margin_top = 72.0
margin_right = 632.0
margin_bottom = 188.0

[node name="Slot4" parent="ArchivePopupControl/Slots" instance=ExtResource( 1 )]
margin_left = 688.0
margin_top = 72.0
margin_right = 776.0
margin_bottom = 188.0

[node name="Slot5" parent="ArchivePopupControl/Slots" instance=ExtResource( 1 )]
margin_left = 824.0
margin_top = 72.0
margin_right = 912.0
margin_bottom = 188.0

[node name="Slot6" parent="ArchivePopupControl/Slots" instance=ExtResource( 1 )]
margin_left = 256.0
margin_top = 216.0
margin_right = 344.0
margin_bottom = 332.0

[node name="Slot7" parent="ArchivePopupControl/Slots" instance=ExtResource( 1 )]
margin_left = 400.0
margin_top = 216.0
margin_right = 488.0
margin_bottom = 332.0

[node name="Slot8" parent="ArchivePopupControl/Slots" instance=ExtResource( 1 )]
margin_left = 544.0
margin_top = 216.0
margin_right = 632.0
margin_bottom = 332.0

[node name="Slot9" parent="ArchivePopupControl/Slots" instance=ExtResource( 1 )]
margin_left = 688.0
margin_top = 216.0
margin_right = 776.0
margin_bottom = 332.0

[node name="Slot10" parent="ArchivePopupControl/Slots" instance=ExtResource( 1 )]
margin_left = 824.0
margin_top = 216.0
margin_right = 912.0
margin_bottom = 332.0

[node name="DeleteButton" type="TextureButton" parent="ArchivePopupControl"]
margin_left = 168.0
margin_top = 1016.0
margin_right = 536.0
margin_bottom = 1168.0
rect_pivot_offset = Vector2( 448, 32 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SetAsFavoriteButton" type="TextureButton" parent="ArchivePopupControl"]
margin_left = 608.0
margin_top = 1016.0
margin_right = 976.0
margin_bottom = 1168.0
rect_pivot_offset = Vector2( 448, 32 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FormulaName" type="LineEdit" parent="ArchivePopupControl"]
margin_left = 176.0
margin_top = 144.0
margin_right = 960.0
margin_bottom = 224.0
custom_colors/font_color = Color( 0.0117647, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Name"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FormulaNote" type="TextEdit" parent="ArchivePopupControl"]
anchor_right = 10.6
anchor_bottom = 6.6
margin_left = 176.0
margin_top = 256.0
margin_right = -10612.4
margin_bottom = -7697.6
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vitae eros erat. Mauris sodales velit libero, euismod viverra sapien aliquet vel. Cras at sapien nibh. Vestibulum viverra eu lectus et consequat. Etiam eu euismod nibh elit, sit amet sodales dui leo eu massa."
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}
